--- a/src/component/Layouts/component/Header/Header.module.scss
+++ b/src/component/Layouts/component/Header/Header.module.scss
@@ -11,16 +11,16 @@
 .container {
     display: flex;
     width: var(--default-layout-width);
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     padding: 0 15px;
     line-height: 1.6rem;
 }
 
 .auth {
-    width: 350.4px;
+    width: 575px;
     & li {
-        margin-left: 171.2px;
+        margin-left: 400px;
     }
 }
 
