--- a/src/component/Button/Button.module.scss
+++ b/src/component/Button/Button.module.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     min-width: 100px;
-    
+
     height: 36px;
     padding: 10px 20px;
     font-size: 1.4rem;
@@ -12,10 +12,10 @@
     background-color: var(--primary);
     user-select: none;
     color: var(--white);
-    
-    &:hover{
-        background-color: #3E3E3E;
-    }  
+
+    &:hover {
+        background-color: #3e3e3e;
+    }
 
     &.disabled {
         pointer-events: none;
@@ -29,29 +29,27 @@
 }
 
 // Button types
-.auth{
+.auth {
     width: 180px;
 }
 
-.sub{
+.sub {
     display: block;
     width: 260px;
     height: 40px;
     background-color: var(--primary);
-    
+
     text-align: left;
 
-    &:hover{
-        background-color: #3E3E3E;
+    &:hover {
+        background-color: #3e3e3e;
     }
-    
-
 }
 
-.hotline{
+.hotline {
     border-radius: 6px;
     background-color: #f8931e;
-    
+
     font-weight: normal;
     width: 100%;
     max-width: 100%;
@@ -61,20 +59,20 @@
     text-transform: none;
     margin-bottom: 1em;
     text-transform: none !important;
-    letter-spacing: .03em;
+    letter-spacing: 0.03em;
     cursor: pointer;
     text-align: center;
-    span{
-        color: #fff!important;
+    span {
+        color: #fff !important;
         font-weight: normal;
-        font-size: 1.552rem!important;
+        font-size: 1.552rem !important;
     }
-    & > .icon{
+    & > .icon {
         display: none;
     }
 
-    &:hover{
-        .icon{
+    &:hover {
+        .icon {
             display: inline-block;
             margin-left: 16px;
         }
@@ -82,16 +80,19 @@
         opacity: 1;
         box-shadow: inset 0 0 0 100px rgb(0 0 0 / 20%);
         background-color: #f8931e;
-        
     }
-    
 }
 
-
-// Disabled
-
-// Button sizes
-
+.order {
+    font-weight: bold;
+    width: 160px;
+    padding: 8px;
+    font-size: 15px;
+    border-radius: 4px;
+    &:hover {
+        box-shadow: inset 0 0 0 100px rgb(0 0 0 / 20%);
+    }
+}
 
 .icon {
     display: inline-block;
