--- a/src/component/Item/Item.module.scss
+++ b/src/component/Item/Item.module.scss
@@ -43,3 +43,10 @@
     font-size: 18px;
     font-weight: bold;
 }
+
+.sub-title {
+    font-size: 14px;
+    color: gray;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+}
